# AntiCompositeBot

./: .gitignore  BadGPS.py  HijackSpam.py  MexFedTelIns.py  Pipfile  README.md  README.rst  ShouldBeSVG-helper.py  ShouldBeSVG.md  ShouldBeSVG.py  default_config.json  harvcheck_deployment.yaml  harvcheck_job.yaml  harvcheck_start.sh  nolicense_cron.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  sigprobs_job.yaml  sigprobs_start.sh  upgrade.sh  wla_tagging_deployment.yaml  wla_tagging_job.yaml
.github/: dependabot.yml
.github/workflows/: pythonapp.yml
etc/: asnblock_cron.yaml  catcron_cron.yaml  catwatch_cron.yaml  dcs_redir_job.yaml  essayimpact_cron.yaml  harvcheck_deployment.yaml  harvcheck_job.yaml  nolicense_cron.yaml  redwarnusers_cron.yaml  should_be_svg_cron.yaml  uncat.sh  uncat_cron.yaml  wla_tagging_job.yaml
src/: BadGPS.py  ShouldBeSVG.py  asnblock.py  blcheck.py  catcron.py  catwatch.py  dcs_redir.py  dump_reverted.py  essayassesment.py  harvcheck.py  nolicense.py  redwarnusers.py  shadows.35.py  shadows.py  sigprobs-analyze.py  sigprobs.py  test_harvcheck.py  uncat.py  utils.py  wla_append.py
src/tests/: test_asnblock.py  test_catcron.py  test_harvcheck.py  test_nolicense.py  test_utils.py
