[tool.poetry]
name = "anticompositebot"
# This version number doesn't do anything. Don't bother changing it.
version = "0"
description = "Collection of Wikimedia Commons and English Wikipedia bot tasks"
authors = ["AntiCompositeNumber"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
pywikibot = "*"
mwparserfromhell = "*"
requests = "*"
requests-oauthlib = "*"
bs4 = "*"
toolforge = "*"
redis = "*"
acnutils = {extras = ["db"], version = "^0.6.2"}

[tool.poetry.dev-dependencies]
pytest = "*"
coveralls = "*"
black = "*"
mypy = "*"
types-requests = "*"
types-PyMySQL = "*"
types-redis = "*"
flake8 = "*"
PyYAML = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "info"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*"]

[tool.mypy]
exclude = "/tests/"
